<resources>
    <string name="app_name">Asset Management</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nik">NIK</string>
    <string name="name">John Doe</string>
    <string name="menu_maintenance">Maintenance</string>
    <string name="maintenance">MAINTENANCE</string>
    <string name="request_assets">Request Assets</string>
    <string name="input_serial_number">Input Serial Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cleaning">Cleaning</string>
    <string name="completeness">Completeness</string>
    <string name="employee">User</string>
    <string name="asset">Asset</string>
    <string name="device">Device</string>
    <string name="sales">Sales Order</string>
    <string name="serial">Serial Number</string>
    <string name="brand">Brand</string>
    <string name="close">Close</string>
    <string name="operating_system">Operating System</string>
    <string name="hardisk">HDD</string>
    <string name="ssd">SSD</string>
    <string name="ram">Memory RAM</string>
    <string name="processor">Processor</string>
    <string name="icon_back">Icon Back</string>
    <string name="compatible">COMPATIBLE</string>
    <string name="notCompatible">NOT COMPATIBLE</string>
    <string name="fullName">Full Name</string>
    <string name="search">Search</string>
    <string name="main_checklist">Main Checklist</string>
    <string name="antivirus">Antivirus</string>
    <string name="application_standard">Application Standard</string>
    <string name="function">Function</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="maintain">Maintain</string>
    <string name="computerName">Computer Name</string>
    <string name="userNameLogin">User Name Login</string>
    <string name="iPAddress">IP Address</string>
    <string name="additional">Additional</string>
    <string name="checking_comparison">Checking Comparison</string>
    <string name="branch">Branch</string>
    <string name="location">Location</string>
    <string name="service_name">Service Name</string>
    <string name="loading">Loading…</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="success">SUCCESS</string>
    <string name="con">continue</string>
    <string name="home">home</string>
    <string name="request">Request</string>
    <string name="Requestt">REQUEST</string>
    <string name="SONumber">SO Number</string>
    <string name="salesorder">Sales Order</string>
    <string name="Input_sales_order">Input Sales Order</string>
    <string name="Name">Name</string>
    <string name="company">Company</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="successs">SUCCESS !</string>
    <string name="stript">-</string>
    <string name="company_name">Company Name</string>
    <string name="sales_order_number">Sales Order Number</string>
    <string name="conf">Confirm</string>
    <string name="invalid">Invalid number</string>
    <string name="Input_Branch">Input Branch</string>
    <string name="Input_NIK">Input NIK</string>
    <string name="Input_name">Input Name</string>
    <string name="search_asset">Search Asset</string>
    <string name="category">Category</string>
    <string name="type_asset_exchange">Asset Exchange</string>
    <string name="type_employee_exchange">Employee Exchange</string>
    <string name="appbar_exchange_type">Exchange Type</string>
    <string name="appbar_generate_exchange">Generate Exchange</string>
    <string name="appbar_profile">Profile</string>
    <string name="appbar_generate_maintenance">Generate Maintenance</string>
    <string name="exchange">Exchange</string>
    <string name="version">Version</string>
    <string name="appbar_exchange_employee">Exchange Employee</string>
    <string name="appbar_exchange_asset">Exchange Asset</string>
    <string name="exchange_asset">Exc Asset</string>
    <string name="detail_exchange">Detail Exchange</string>
    <string name="current_nik">Current NIK</string>
    <string name="current_name">Current Name</string>
    <string name="new_user">New User</string>
    <string name="reason">Reason</string>
    <string name="apbar_information">Information</string>
    <string name="apbar_maintenance">Maintenance</string>
    <string name="brand_name">Brand Name</string>
    <string name="menu_history_request">History Request</string>
    <string name="appbar_history">History</string>
    <string name="date_request">Date Request</string>
    <string name="quantity">Quantity</string>
    <string name="notes">Notes</string>
    <string name="apbar_history_detail">History Detail</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="id_request">ID Transaction</string>
    <string name="status">Status</string>
    <string name="qty">Qty</string>
    <string name="detail">Detail</string>
    <string name="new_name">New Name</string>
    <string name="old_serial_number">Old Serial Number</string>
    <string name="ex_ip">192.168.1.1</string>
    <string name="comp_name">comp123</string>
    <string name="new_nik">New NIK</string>
    <string name="appbar_detail_maintenance">Detail Maintenance</string>
    <string name="History">HISTORY</string>
    <string name="RequestNew">Request New</string>
    <string name="exchange_user">Exc User</string>
    <string name="maintenancee">Maintenance</string>
    <string name="appbar_his_maintenance">Maintenance</string>
    <string name="appbar_his_req_new">Request New Asset</string>
    <string name="appbar_his_exc_asset">Request Exchange Asset</string>
    <string name="appbar_his_exc_user">Request Exchange User</string>
    <string name="part_name">Part Name</string>
    <string name="part_type">Part Type</string>
    <string name="status_matching">Match</string>
    <string name="status_different">Diff</string>
    <string name="old_nik">Old Nik</string>
    <string name="old_name">Old Name</string>
    <string name="transactiondetail">Transaction Detail</string>
    <string name="employeeInformatio">Employee Information</string>
    <string name="employeeInformation">Employee Information</string>
    <string name="assetInformation">Asset Information</string>
    <string name="type_here">Type here…</string>
    <string name="input_brand">Input Brand</string>
    <string name="minus">-</string>
    <string name="amount">0</string>
    <string name="plus">+</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hi_there">Hi, There!</string>

</resources>
