<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:text="@string/asset"
        android:textSize="16sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorGreySoft" />

    <TextView
        style="@style/ItemInputTitle"
        android:text="@string/branch" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_ipAddress"
        style="@style/ItemInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_field"
        android:hint="@string/Input_Branch"
        android:padding="10dp" />

    <TextView
        style="@style/ItemInputTitle"
        android:text="@string/nik" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        style="@style/ItemInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_field"
        android:hint="@string/Input_NIK"
        android:padding="10dp" />

    <TextView
        style="@style/ItemInputTitle"
        android:text="@string/Name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_computerName"
        style="@style/ItemInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_field"
        android:hint="@string/Input_name"
        android:padding="10dp" />
</LinearLayout>