<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Employee-->
        <LinearLayout
            style="@style/ItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mregular"
                android:text="@string/employee"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorGreySoft" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/nik" />

            <TextView
                android:id="@+id/tv_nik"
                style="@style/ItemLayoutUserField" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/fullName" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/ItemLayoutUserField" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/branch" />

            <TextView
                android:id="@+id/tv_branch"
                style="@style/ItemLayoutUserField" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/ItemLayoutUserField" />

        </LinearLayout>

        <!--Asset-->
        <LinearLayout
            style="@style/ItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mregular"
                android:text="@string/asset"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorGreySoft" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/sales" />

            <TextView
                android:id="@+id/tv_sales"
                style="@style/ItemLayoutUserField" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/serial" />

            <TextView
                android:id="@+id/tv_serial"
                style="@style/ItemLayoutUserField" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/brand" />

            <TextView
                android:id="@+id/tv_brand"
                style="@style/ItemLayoutUserField" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/category" />

            <TextView
                android:id="@+id/tv_category"
                style="@style/ItemLayoutUserField" />

        </LinearLayout>

        <!--Device-->
        <include
            android:id="@+id/asset"
            style="@style/ItemLayout"
            layout="@layout/layout_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_maintenance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_blue"
            android:fontFamily="@font/mmedium"
            android:text="@string/maintain"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/mmedium"
            android:text="@string/close"
            android:textColor="@color/colorRed"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>