<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:text="@string/sales"
        android:textSize="12sp" />

    <TextView
        style="@style/ItemLayoutUserField"
        android:text="123456789"
        android:textSize="16sp" />

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:layout_marginTop="10dp"
        android:text="@string/company"
        android:textSize="12sp" />

    <TextView
        style="@style/ItemLayoutUserField"
        android:text="123456789"
        android:textSize="16sp" />

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:layout_marginTop="10dp"
        android:text="@string/branch"
        android:textSize="12sp" />

    <TextView
        style="@style/ItemLayoutUserField"
        android:text="123456789"
        android:textSize="16sp" />

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:layout_marginTop="10dp"
        android:text="@string/sales"
        android:textSize="12sp" />

    <TextView
        style="@style/ItemLayoutUserField"
        android:text="123456789"
        android:textSize="16sp" />

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:layout_marginTop="10dp"
        android:text="@string/nik"
        android:textSize="12sp" />

    <TextView
        style="@style/ItemLayoutUserField"
        android:text="123456789"
        android:textSize="16sp" />

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:layout_marginTop="10dp"
        android:text="@string/Name"
        android:textSize="12sp" />

    <TextView
        style="@style/ItemLayoutUserField"
        android:text="123456789"
        android:textSize="16sp" />


</LinearLayout>