<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.ReviewActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp">

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:text="@string/sales"
                android:textSize="12sp" />

            <TextView
                style="@style/ItemLayoutUserField"
                android:text="123456789"
                android:textSize="16sp" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:layout_marginTop="10dp"
                android:text="@string/company"
                android:textSize="12sp" />

            <TextView
                style="@style/ItemLayoutUserField"
                android:text="Company Name"
                android:textSize="16sp" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:layout_marginTop="10dp"
                android:text="@string/branch"
                android:textSize="12sp" />

            <TextView
                style="@style/ItemLayoutUserField"
                android:text="Branch Name"
                android:textSize="16sp" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:layout_marginTop="10dp"
                android:text="@string/nik"
                android:textSize="12sp" />

            <TextView
                style="@style/ItemLayoutUserField"
                android:text="Number NIK"
                android:textSize="16sp" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:layout_marginTop="10dp"
                android:text="@string/Name"
                android:textSize="12sp" />

            <TextView
                style="@style/ItemLayoutUserField"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                style="@style/ItemLayoutUserTitle"
                android:layout_marginTop="10dp"
                android:text="@string/item"
                android:textSize="12sp" />

            <TextView
                style="@style/ItemLayoutUserField"
                android:layout_marginTop="10dp"
                android:text="123456789"
                android:textSize="16sp" />


            <include
                android:id="@+id/submit"
                style="@style/ItemLayout"
                layout="@layout/layout_btn_result_req"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>