<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:text="@string/salesorder"
        android:textSize="16sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorGreySoft" />

    <TextView
        style="@style/ItemLayoutUserTitle"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mregular"
        android:text="@string/salesorder"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_sales_order"
        style="@style/ItemLayoutUserField"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_field"
        android:focusable="false"
        android:hint="@string/Input_sales_order"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mregular"
        android:text="@string/company"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mregular"
        android:text="@string/stript"
        android:textSize="14sp" />
</LinearLayout>