<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ic_success"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_success" />

    <TextView
        android:id="@+id/tv_success"
        style="@style/ItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/msemibold"
        android:text="@string/successs"
        android:textColor="@color/colorField" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/mlight"
        android:textSize="18sp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_blue"
        android:text="@string/con" />
</LinearLayout>